Fixed SectionHeader background issue when text overflows.

--- a/src/components/common/SectionHeader/SectionHeader.scss
+++ b/src/components/common/SectionHeader/SectionHeader.scss
@@ -8,12 +8,10 @@
   width: 100%;
 
   .header-text {
-    padding-top: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
-    width: auto;
     background-color: var(--secondary);
-    height: 50px;
+    padding: 10px;
+    width: auto;
+    height: auto;
     text-align: center;
     font-weight: bold;
     font-size: 30px;
